Spacing fixed

--- a/css/faq.css
+++ b/css/faq.css
@@ -54,8 +54,8 @@ body {
 
 .faq-q {
   cursor: pointer;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 1.5em;
   font-weight: 100;
   text-align: center;
